# axis-core

./: .gitignore  GETTING_STARTED.md  KNOWN_ISSUES.md  OVERVIEW.md  README.md  axis_core_ir_0_1.capnp  build_compiler.sh  compile_ax.sh
core-compiler/: Cargo.toml  build.rs
core-compiler/src/: core_loader.rs  core_validator.rs  emit_rust.rs  lib.rs  main.rs  module_loader.rs  registry_loader.rs  runtime.rs  runtime_value.rs  surface_lower.rs  surface_parser.rs  surface_parser.rs.backup  surface_to_core.rs  trace.rs  validation_registry.rs
examples/: README.txt  hello.ax  multi_main.ax  utils.ax
lang_spec/: axis-core-ir-0.1.md  axis-language-surface-0.1.md  axis-registry-0.1.md
registries/: axis.axreg
rust-bridge/: Cargo.toml
rust-bridge/src/: core_ir.rs  core_loader.rs  lib.rs  main.rs
rust-bridge/src/runtime/: core_emit.rs  emit_rust.rs  emit_rust_regression_tests.rs  integration_guide.rs  io.rs  list.rs  mod.rs  shim.rs  shim_tests.rs  tuple.rs  value.rs
