[package]
name = "axis-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
capnp = "0.19"

[build-dependencies]
capnpc = "0.19"

[lib]
name = "axis_compiler"
path = "src/lib.rs"

[[bin]]
name = "axis-compiler"
path = "src/main.rs"
