[package]
name = "axis-rust-bridge"
version = "0.1.0"
edition = "2021"

# ----------------------------------------
# Library (linkable runtime)
# ----------------------------------------
[lib]
name = "axis_rust_bridge"
path = "src/lib.rs"

# ----------------------------------------
# Binary (CLI bridge tool)
# ----------------------------------------
[[bin]]
name = "axis-rust-bridge"
path = "src/main.rs"

# ----------------------------------------
# Dependencies
# ----------------------------------------
[dependencies]
capnp = "0.19"
serde_json = "1.0"

# ----------------------------------------
# Build-time dependencies (Cap'n Proto)
# ----------------------------------------
[build-dependencies]
capnpc = "0.19"

# ----------------------------------------
# Dev / test utilities
# ----------------------------------------
[dev-dependencies]
tempfile = "3.0"
